[fix] reduced spacing and font

--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
 @mixin header($n) {
-  padding-top: 1.5rem;
+  padding-top: 1.4rem;
   // padding-bottom: 0.5rem;
   font-weight: $n;
 }
@@ -13,6 +13,9 @@
   // text-align: center;
   justify-content: center;
   color: var(--grey-text-1-100);
+  @media (max-width: 768px) {
+    padding: 0.5rem 1rem 0.5rem 1rem;
+  }
 }
 
 @mixin line($c) {
@@ -24,13 +27,13 @@
 }
 
 .wrapper {
+  margin-top: 5rem;
   background-color: #ffffff;
   position: relative;
   box-shadow: 0px 4px 18px rgba(0, 0, 0, 0.25);
   width: 100%;
   display: flex;
   flex-flow: row wrap;
-  bottom: 0;
   @media (max-width: 768px) {
     flex-flow: column nowrap;
   }
@@ -72,7 +75,7 @@ a {
   }
 }
 
-.text a {
+a {
   color: var(--grey-text-1-100);
   &:hover {
     color: var(--grey-text-1-70);
@@ -89,11 +92,6 @@ a {
   gap: 2rem;
   padding-top: 1rem;
   padding-bottom: 0.5rem;
-  a {
-    &:hover {
-      color: var(--grey-text-1-100);
-    }
-  }
 }
 
 .red {
@@ -117,7 +115,10 @@ a {
   font-size: 1.7rem;
   text-align: center;
   @media (max-width: 768px) {
-    font-size: 1.2rem;
+    font-size: 0.9rem;
+  }
+  @media (max-width: 373px) {
+    font-size: 0.7rem;
   }
 }
 
@@ -125,7 +126,11 @@ a {
   width: 5rem;
   padding-right: 1rem;
   @media (max-width: 768px) {
-    font-size: 1.5rem;
-    padding-right: 0.7rem;
+    width: 3rem;
+    padding-right: 0.5rem;
+  }
+  @media (max-width: 373px) {
+    width: 2rem;
+    padding-right: 0.4rem;
   }
 }
